k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: kamel
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
