k8s/server-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector: 
    server: web
  ports:
    - port: 80
      targetPort: 80
